Amon overlay text overlapping problem fixed

--- a/tauri-overlay/public/overlay/main.css
+++ b/tauri-overlay/public/overlay/main.css
@@ -178,7 +178,6 @@ body {
     font-size: 2.5vh;
     text-shadow: 0.1vh 0.1vh 0.1vh black;
     font-weight: bold;
-    margin-bottom: -2.6vh;
 }
 
 #name2 {
